--- a/wechat/pom.xml
+++ b/wechat/pom.xml
@@ -24,6 +24,7 @@
 		<commons-fileupload.version>1.3</commons-fileupload.version>
 		<jackson.version>2.2.1</jackson.version>
 		<xstream.version>1.4.3</xstream.version>
+		<freemarker.version>[2.3.19,2.4)</freemarker.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -309,6 +310,12 @@
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
 			<version>${xstream.version}</version>
+		</dependency>
+		<!-- freemarker 模板 -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
