--- a/wechat/src/main/resources/application.properties
+++ b/wechat/src/main/resources/application.properties
@@ -1,12 +1,22 @@
 #mysql database setting
+#username : SAE_MYSQL_USER
+#password : SAE_MYSQL_PASS
+#master database domain : SAE_MYSQL_HOST_M
+#slave database domain : SAE_MYSQL_HOST_S
+#port : SAE_MYSQL_PORT
+#database name: SAE_MYSQL_DB
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/wechat?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=root
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/wechat?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://SAE_MYSQL_HOST_M:SAE_MYSQL_PORT/SAE_MYSQL_DB?useUnicode=true&characterEncoding=utf-8
+jdbc.username=SAE_MYSQL_USER
+jdbc.password=SAE_MYSQL_PASS
+#jdbc.username=root
+#jdbc.password=root
 #pool settings
-jdbc.pool.minIdle=3
-jdbc.pool.maxActive=20
+jdbc.pool.maxIdle=5
+jdbc.pool.maxActive=10
+jdbc.pool.maxWait=180000
 
 #jdbc init database
 jdbc.initialize.database.enable = true
