--- a/wechat/pom.xml
+++ b/wechat/pom.xml
@@ -26,6 +26,7 @@
 		<xstream.version>1.4.3</xstream.version>
 		<freemarker.version>[2.3.19,2.4)</freemarker.version>
 		<commons-dbcp.version>1.4</commons-dbcp.version>
+		<httpclient.version>4.3.2</httpclient.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -323,6 +324,12 @@
 			<artifactId>freemarker</artifactId>
 			<version>${freemarker.version}</version>
 		</dependency>
+		<!-- HttpClient 4.3 -->
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>${httpclient.version}</version>
+			</dependency>
 	</dependencies>
 	<build>
 		<finalName>wechat</finalName>
