--- a/wechat/src/main/resources/application.properties
+++ b/wechat/src/main/resources/application.properties
@@ -7,12 +7,12 @@
 #database name: SAE_MYSQL_DB
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/wechat?useUnicode=true&characterEncoding=utf-8
-jdbc.url=jdbc:mysql://SAE_MYSQL_HOST_M:SAE_MYSQL_PORT/SAE_MYSQL_DB?useUnicode=true&characterEncoding=utf-8
-jdbc.username=SAE_MYSQL_USER
-jdbc.password=SAE_MYSQL_PASS
-#jdbc.username=root
-#jdbc.password=root
+jdbc.url=jdbc:mysql://127.0.0.1:3306/wechat?useUnicode=true&characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://SAE_MYSQL_HOST_M:SAE_MYSQL_PORT/SAE_MYSQL_DB?useUnicode=true&characterEncoding=utf-8
+#jdbc.username=SAE_MYSQL_USER
+#jdbc.password=SAE_MYSQL_PASS
+jdbc.username=root
+jdbc.password=root
 #pool settings
 jdbc.pool.maxIdle=5
 jdbc.pool.maxActive=10
