little modify :smile:

--- a/wechat/src/main/resources/application.properties
+++ b/wechat/src/main/resources/application.properties
@@ -7,16 +7,16 @@
 #database name: SAE_MYSQL_DB
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/wechat?useUnicode=true&characterEncoding=utf-8
-#jdbc.url=jdbc:mysql://w.rdc.sae.sina.com.cn:3307/app_sydhappy?useUnicode=true&characterEncoding=utf-8
-#jdbc.username=ww0xoynk04
-#jdbc.password=wi4153mz02k2ilyhlykw31ixyz0wmiwylkwywikm
-jdbc.username=root
-jdbc.password=root
+jdbc.test.url=jdbc:mysql://127.0.0.1:3306/wechat?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
+jdbc.url=jdbc:mysql://w.rdc.sae.sina.com.cn:3307/app_sydhappy?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
+jdbc.username=ww0xoynk04
+jdbc.password=wi4153mz02k2ilyhlykw31ixyz0wmiwylkwywikm
+jdbc.test.username=root
+jdbc.test.password=root
 #pool settings
 jdbc.pool.maxIdle=5
 jdbc.pool.maxActive=10
-jdbc.pool.maxWait=180000
+jdbc.pool.maxWait=10
 
 #jdbc init database
 jdbc.initialize.database.enable = true
